fix alignment issues for dashboard

--- a/src/app.scss
+++ b/src/app.scss
@@ -80,6 +80,10 @@
   }
 }
 
+html, body{
+    overflow: hidden;
+}
+
 
 body {
 	min-height: 100vh;
@@ -95,12 +99,6 @@ body {
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
-h1,
-h2,
-p {
-	font-weight: 400;
-}
-
 p {
 	line-height: 1.5;
 }
@@ -112,15 +110,6 @@ a {
 
 a:hover {
 	text-decoration: underline;
-}
-
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
-
-h2 {
-	font-size: 1rem;
 }
 
 pre {
